# rust-db-from-scratch

./: Cargo.toml  README.md
.github/workflows/: run-test.yml
src/: collection.rs  collection_file.rs  collection_indexer.rs  collection_page.rs  document.rs  main.rs  storage.rs
src/storage/: mod.rs  write_to_collection.rs
