[package]
name = "rust-db-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_derive = "1.0"

[dev-dependencies]
tempfile = "3.2.0"
